--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly  'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+
+    // ##### test #####
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
+    // lombok
+    testCompileOnly 'org.projectlombok:lombok'
+    testAnnotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
