--- a/build.gradle
+++ b/build.gradle
@@ -29,9 +29,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
     implementation "com.vladmihalcea:hibernate-types-60:2.21.1"
+    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly  'com.mysql:mysql-connector-j'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 	annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
     // ##### test #####
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
